# docker-cookbook

./: README.md
python-fastapi-lambda/: Dockerfile  main.py  pyproject.toml
ubuntu-hello/: Dockerfile
